<resources>
    <string name="app_name">Cheat Sheet</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_delete">Löschen</string>
    <string name="action_photo">Foto hinzufügen</string>
    <string name="action_save">Speichern</string>
    <string name="note_hint">Maximal 2000 Zeichen</string>

    <!-- Note Desc -->
    <string name="desc_title">Titel</string>
    <string name="desc_place">Ort</string>
    <string name="desc_photo">Foto</string>
    <string name="desc_note">Notiz</string>

    <!-- Misc -->
    <string name="undefined">null</string>
    <string name="photo_not_found">Das Foto konnte nicht gefunden werden.</string>
    <string name="button_disabled">Der Knopf ist gesperrt.</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_fatal">Ein Fehler ist aufgetreten.</string>
</resources>
