<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="world.eu.ch.zh.bbw.cheatsheet.cheatsheet.SaveActivity"
    tools:showIn="@layout/activity_save">

    <TextView
        android:id="@+id/desc_title"
        android:layout_height="match_parent"
        android:text="@string/desc_title"
        android:layout_width="match_parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_title"/>

    <TextView
        android:id="@+id/desc_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/place"
        android:text="@string/desc_place"/>
    <TextView
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/desc_place"
        android:text="@string/undefined"/>


</RelativeLayout>