<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="world.eu.ch.zh.bbw.cheatsheet.cheatsheet.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/desc_title"
        android:layout_height="match_parent"
        android:text="@string/desc_title"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"/>
    <EditText
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_title"
        android:layout_weight="1"
        android:inputType="none"
        android:editable="false" />

    <TextView
        android:id="@+id/desc_photo"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/desc_photo"/>
    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/desc_photo"/>

    <TextView
        android:id="@+id/desc_note"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo"
        android:text="@string/desc_note"/>
    <EditText
        android:id="@+id/note"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_note"
        android:layout_weight="1"
        android:inputType="none"
        android:maxLength="2000"
        android:maxLines="8"
        android:editable="false"/>



    <!-- android:gravity for API 16 and lower -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/place"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:linksClickable="true"
        android:textColor="#ff0000"
        android:textColorHighlight="#ff7300"
        android:visibility="visible"
        android:onClick="onClickOrt"
        android:nestedScrollingEnabled="false"
        android:textAlignment="viewEnd"
        android:gravity="end"/>

</RelativeLayout>
</ScrollView>